--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ankur99/react-og-buds.git"
+  },
   "scripts": {
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run prettier && npm run lint",
@@ -15,9 +19,18 @@
     "prettier": "prettier --write \"{src,tests,example/src}/**/*.{js,ts,jsx,tsx}\"",
     "test": "jest --config jestconfig.json"
   },
-  "keywords": [],
-  "author": "lazy-mekuri",
-  "license": "ISC",
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md"
+  ],
+  "keywords": [
+    "react-button",
+    "typescript-button",
+    "button"
+  ],
+  "author": "Ankur Choudhury (lazy-mekuri)",
+  "license": "MIT",
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.4.0",
@@ -37,5 +50,8 @@
     "react-dom": "^18.2.0",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
+  },
+  "peerDependencies": {
+    "react": ">=17"
   }
 }
